# cashflowviz

./: README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
src-py/: classifier.py  helper_functions.py  import.py  import_data.py
src-py/resources/: constants.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs
src/lib/app/: types.ts
src/lib/components/: TransactionCategory.svelte  TransactionRow.svelte  TransactionTable.svelte  Upload.svelte
src/lib/services/: upload.ts
src/routes/: +page.svelte
